--- a/web/account.html
+++ b/web/account.html
@@ -30,7 +30,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="line">
 	
 	</div>
-	<div class="header">
+	<div class="header" >
 		<div class="logo">
 			<a href="index.html"><img src="images/logo.png" alt="" ></a>
 		</div>
@@ -61,146 +61,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<script>
 							new UISearch( document.getElementById( 'sb-search' ) );
 						</script>
-					<!-- //search-scripts -->
-					<div class="online">
-					<a href="single.html">SHOP ONLINE</a>
-					</div>
-					<div class="clearfix"> </div>
-			</div>
-			<div class="header-bottom">
-				<div class="h_menu4"><!-- start h_menu4 -->
-				<a class="toggleMenu" href="#">Menu</a>
-				<ul class="nav">
-					<li class="active"><a href="product.html">Running</a></li>
-					<li><a href="product.html">Fitness</a></li>					
-					<li><a href="product.html">Tennis</a></li>
-					<li><a href="product.html">Football</a></li>
-					<li><a href="product.html">Golf</a></li>
-					<li><a href="product.html">More <i> </i></a>
-						<ul>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="account.html">Account</a></li>
-<li><a href="register.html">Register</a></li>						</ul>
-					</li>
-				</ul>
+			
 				<script type="text/javascript" src="js/nav.js"></script>
 			</div><!-- end h_menu4 -->
-					<ul class="header-bottom-in">
-						<li ><select class="drop">
-							  <option value="Dollars" class="in-of">Get Active</option>
-							  <option value="Euro" class="in-of">Get Active1</option>
-							  <option value="Yen" class="in-of">Get Active2</option>
-							</select> </li>
-						<li ><select class="drop">
-							  <option value="Dollars" class="in-of">Community</option>
-							  <option value="Euro" class="in-of">Community1</option>
-							  <option value="Yen" class="in-of">Community2</option>
-							</select></li>		
-					</ul>
 			<div class="clearfix"> </div>
 		</div>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
 	<!---->	
+	
 <div class="container">
 		<div class="account">
-		<h2>Account</h2>
+		<h2>Login</h2>
 		<div class="account-pass">
-		<div class="col-md-7 account-top">
+		
+		<div class="col-md-10 account-top"  >
 			<form>
 				
 			<div> 	
 				<span>Email</span>
-				<input type="text"> 
+				<input type="text" size="8"> 
 			</div>
 			<div> 
 				<span >Password</span>
-				<input type="password">
-			</div>				
-				<input type="submit" value="Login"> 
-			</form>
-		</div>
-		<div class="col-md-5 left-account ">
-			<a href="single.html"><img class="img-responsive " src="images/ac.png" alt=""></a>
-			<div class="five">
-			<h1>25% </h1><span>discount</span>
-			</div>
-			<a href="register.html" class="create">Create an account</a>
-<div class="clearfix"> </div>
-		</div>
-	<div class="clearfix"> </div>
-	</div>
-	</div>
-
-</div>
-	<!---->
-<!--footer-->
-	<div class="footer">
-		<div class="col-md-3 footer-left">
-			<h4>Sports</h4>
-			<div class="run-top">
-				<ul class="run-grid">
-					<li><a href="#">RUNNING</a></li>
-					<li><a href="#">CYCLING</a></li>
-					<li><a href="#">TRIATHLON</a></li>
-					<li><a href="#">FITNESS</a></li>
-					<li><a href="#">TENNIS</a></li>
-					<li><a href="#">MORE SPORTS</a></li>
-				</ul>
-				<ul class="run-grid">
-					<li><a href="#">STYLE</a></li>
-					<li><a href="#">SPECIAL</a></li>
-					<li><a href="#">BRAND EVENTS</a></li>
-				</ul>
-			<div class="clearfix"> </div>
-			</div>
-		</div>
-		<div class="col-md-3 footer-left left-footer">
-			<h4>Latest</h4>
-			<div class="run-top top-run">
-				<ul class="run-grid">
-					<li><a href="#">News & Events</a></li>
-					<li><a href="#">Community</a></li>
-					<li><a href="#">Videos</a></li>
-					<li><a href="#">Shopping</a></li>
-					<li><a href="#">Sponsorships</a></li>
-					<li><a href="#">more sports</a></li>
-				</ul>
-				<ul class="run-grid">
-					<li><a href="#">Clubs and Training</a></li>
-					<li><a href="#">Event Map</a></li>
-					<li><a href="#">Challange the world</a></li>
-				</ul>
-			<div class="clearfix"> </div>
-			</div>
-		</div>
-		<div class="col-md-2 footer-left left-footer">
-			<h4>Your Account</h4>
-				<ul class="run-grid-in">
-					<li><a href="account.html">Login</a></li>
-					<li><a href="#">My Sports</a></li>
-					<li><a href="#">My Events</a></li>
-				</ul>
-		</div>
-		<div class="col-md-4 footer-left left-footer">
-			<ul class="social-in">
-				<li><a href="#"><i> </i></a></li>
-				<li><a href="#"><i class="youtube"> </i></a></li>
-				<li><a href="#"><i class="facebook"> </i></a></li>
-				<li><a href="#"><i class="twitter"> </i></a></li>
-			</ul>
-			<div class="letter">
-				<h5>NEWSLETTER</h5>
-				<span>in the next article</span>
-				<h6>NRL: five things we learned this weekend</h6>
-				<p>In support of suburban games; Warriors rip</p>
-				<a href="register.html" class="sign">SIGN UP AND GET MORE</a>
-				<p class="footer-class"> © 2015 Sport All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
-			</div>
-			
-		</div>
-		<div class="clearfix"> </div>
-	</div>
+				<input type="password" size="8">
+			</div>		
+			<center>		
+				<input type="submit" value="project_seeker" align="center">
+				<input type="submit" value="project_creater" align="center"> 
+			</center></form>
+		</div></div>
+		
 </body>
 </html>
